foundation-objs/main/default/objects/QuoteLineItem/fields/Actual_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sell_Price__c</fullName>
    <formula>Sale_Price__c  -  Add_On_Discounted_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>