foundation-objs/main/default/objects/QuoteLineItem/fields/Actual_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Unit_Price__c</fullName>
    <formula>UnitPrice  -  Add_On_Prices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>