foundation-objs/main/default/objects/QuoteLineItem/fields/Add_On_Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Discounted_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Add On Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>