foundation-objs/main/default/objects/QuoteLineItem/fields/Applicable_TDS__c.field-meta.xml
<CustomField>
    <fullName>Applicable_TDS__c</fullName>
    <label>Applicable TDS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>