foundation-objs/main/default/objects/QuoteLineItem/fields/BtoB_Sales_one__c.field-meta.xml
<CustomField>
    <fullName>BtoB_Sales_one__c</fullName>
    <label>No. of B2B sales invoice</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>