foundation-objs/main/default/objects/QuoteLineItem/fields/BtoC_Sales_one__c.field-meta.xml
<CustomField>
    <fullName>BtoC_Sales_one__c</fullName>
    <label>No. of B2C Sales</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>