foundation-objs/main/default/objects/QuoteLineItem/fields/Calculate_Threshold_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Threshold_Sale_Price__c</fullName>
    <formula>IF(AND(
OR(
Quote.Opportunity.RecordType.Name = &apos;Renewal&apos;,
Quote.Opportunity.RecordType.Name = &apos;Renewal - Multi year&apos;,
TEXT(Line_Item_Type__c) = &apos;Renewal&apos;,
TEXT(Line_Item_Type__c) = &apos;Renewal - Multi year&apos; 
),
CONTAINS(Quote.Opportunity.Owner.Division,&apos;Yellow&apos;)),
IF(Product2.ProductCode=&apos;EINV-EWB-LIC_NKAM&apos; || Product2.ProductCode=&apos;EINV_ASP-API&apos; ,45000,Product2.Threshold_Price__c),

IF(AND(
OR(
Quote.Opportunity.RecordType.Name = &apos;Renewal&apos;,
Quote.Opportunity.RecordType.Name = &apos;Renewal - Multi year&apos;
),
CONTAINS(Quote.Opportunity.Owner.Department, &apos;KAM&apos;)),
IF(Product2.ProductCode=&apos;GST-PREMIUM&apos;,150000,
IF(Product2.ProductCode=&apos;GST-ULTIMATE&apos;,300000,
IF(Product2.ProductCode=&apos;GST-ADVANTAGE_CSM&apos; ,75000,
IF(Product2.ProductCode=&apos;GST-ADVANTAGE&apos; ,75000,
Product2.Threshold_Price__c)
))),


IF(OR
(
TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;EC&apos; ,
TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;TL_EC&apos;,
TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;PBM&apos;,
TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;TL_Channel&apos;, CONTAINS(Quote.Opportunity.Owner.Division,&apos;Yellow&apos;)),
IF(OR(Product2.ProductCode=&apos;MITC-ULTIMATE&apos;,
Product2.ProductCode=&apos;MITC-ULTIMATE-NOPAY&apos;),
500000,
IF(Product2.ProductCode=&apos;MITC-PREMIUM&apos; ,
300000,Product2.Threshold_Price__c)),

Product2.Threshold_Price__c)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate Threshold Sale Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>