foundation-objs/main/default/objects/QuoteLineItem/fields/Flat_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Flat_Transaction_Fee__c</fullName>
    <label>Flat Transaction Fee</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>