foundation-objs/main/default/objects/QuoteLineItem/fields/GCC_Einv_Integration__c.field-meta.xml
<CustomField>
    <fullName>GCC_Einv_Integration__c</fullName>
    <label>GCC Einv Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration Development</fullName>
            </value>
            <value>
                <fullName>Integration Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>