foundation-objs/main/default/objects/QuoteLineItem/fields/Initial_QLI_Price__c.field-meta.xml
<CustomField>
    <fullName>Initial_QLI_Price__c</fullName>
    <inlineHelpText>First Non Zero Sale Price on this QLI.</inlineHelpText>
    <label>Initial QLI Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>