foundation-objs/main/default/objects/QuoteLineItem/fields/Is_Price_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Price_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Price Locked?</label>
    <type>Checkbox</type>
</CustomField>