foundation-objs/main/default/objects/QuoteLineItem/fields/Is_TDS_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_TDS_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is TDS Applicable</label>
    <type>Checkbox</type>
</CustomField>