foundation-objs/main/default/objects/QuoteLineItem/fields/No_MM2A_2B_usage_GSTIN_month__c.field-meta.xml
<CustomField>
    <fullName>No_MM2A_2B_usage_GSTIN_month__c</fullName>
    <label>No. of MM2A/2B usage/GSTIN/month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>