foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_AADHAAR_VERIFICATION_DIGILOCKER_A__c.field-meta.xml
<CustomField>
    <fullName>No_of_AADHAAR_VERIFICATION_DIGILOCKER_A__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of AADHAAR VERIFICATION DIGILOCKER A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>