foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_airline_invoices_annual_one__c.field-meta.xml
<CustomField>
    <fullName>No_of_airline_invoices_annual_one__c</fullName>
    <label>No of airline invoices(annual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>