foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_API_calls_permissible__c.field-meta.xml
<CustomField>
    <fullName>No_of_API_calls_permissible__c</fullName>
    <label>No. of Invoicing API calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>