foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_COMPANY_DETAILS_FULL_APIs__c.field-meta.xml
<CustomField>
    <fullName>No_of_COMPANY_DETAILS_FULL_APIs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of COMPANY DETAILS FULL APIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>