foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_EINVOICE_INBOUND_DETAILS_APIs__c.field-meta.xml
<CustomField>
    <fullName>No_of_EINVOICE_INBOUND_DETAILS_APIs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of EINVOICE INBOUND DETAILS APIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>