foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_expected_B2C_invoices_for_QR_code__c.field-meta.xml
<CustomField>
    <fullName>No_of_expected_B2C_invoices_for_QR_code__c</fullName>
    <label>No. of expected B2C invoices for QR code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>