foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_INTERNATIONAL_BUSINESS_NAME_SEARC__c.field-meta.xml
<CustomField>
    <fullName>No_of_INTERNATIONAL_BUSINESS_NAME_SEARC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of INTERNATIONAL BUSINESS NAME SEARC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>