foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_line_items_in_Form_26AS_Annum__c.field-meta.xml
<CustomField>
    <fullName>No_of_line_items_in_Form_26AS_Annum__c</fullName>
    <label>No. of line items in Form 26AS/Annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>