foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_line_items_TCS_TDS_RL_Plans__c.field-meta.xml
<CustomField>
    <fullName>No_of_line_items_TCS_TDS_RL_Plans__c</fullName>
    <label>No. of line items TCS/TDS RL/Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>