foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_PAN_one__c.field-meta.xml
<CustomField>
    <fullName>No_of_PAN_one__c</fullName>
    <label>No. of PAN</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>