foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_PAN_SIMPLE_DETAILS_APIs_No_of_FS__c.field-meta.xml
<CustomField>
    <fullName>No_of_PAN_SIMPLE_DETAILS_APIs_No_of_FS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of PAN SIMPLE DETAILS APIs No. of FS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>