foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_reconciliation_runs_p_a__c.field-meta.xml
<CustomField>
    <fullName>No_of_reconciliation_runs_p_a__c</fullName>
    <label>No. of reconciliation runs p.a</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>