foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_recons__c.field-meta.xml
<CustomField>
    <fullName>No_of_recons__c</fullName>
    <label>No. of recons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>