foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_Total_invoices__c.field-meta.xml
<CustomField>
    <fullName>No_of_Total_invoices__c</fullName>
    <label>No. of Total invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>