foundation-objs/main/default/objects/QuoteLineItem/fields/No_of_UNREGISTERED_GST_APPLICANT_VERIFI__c.field-meta.xml
<CustomField>
    <fullName>No_of_UNREGISTERED_GST_APPLICANT_VERIFI__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of UNREGISTERED GST APPLICANT VERIFI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>