foundation-objs/main/default/objects/QuoteLineItem/fields/Number_of_Deductees_per_Quarter_24Q_26__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deductees_per_Quarter_24Q_26__c</fullName>
    <label>No. of Deductees / Qtr(24Q,26Q,27Q,27QE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>