foundation-objs/main/default/objects/QuoteLineItem/fields/Number_of_Deduction_Transactions_per_Qua__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deduction_Transactions_per_Qua__c</fullName>
    <label>No. of Deduction Trans/Qtr(24Q,26Q,27..)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>