foundation-objs/main/default/objects/QuoteLineItem/fields/Number_of_eway_bill__c.field-meta.xml
<CustomField>
    <fullName>Number_of_eway_bill__c</fullName>
    <label>Number of eway bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>