foundation-objs/main/default/objects/QuoteLineItem/fields/Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Order_Details__c</fullName>
    <label>Order Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>