foundation-objs/main/default/objects/QuoteLineItem/fields/Over_Usage_Charge__c.field-meta.xml
<CustomField>
    <fullName>Over_Usage_Charge__c</fullName>
    <description>This is calculated while renewal in case of any overuse for previous license</description>
    <label>Over Usage Charge (For Renewal Assets)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>