foundation-objs/main/default/objects/QuoteLineItem/fields/Partner_Count_for_GeEr_up_Reports__c.field-meta.xml
<CustomField>
    <fullName>Partner_Count_for_GeEr_up_Reports__c</fullName>
    <label>Partner Count for GeEr-up Reports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>