foundation-objs/main/default/objects/QuoteLineItem/fields/Product_Module_Corrected__c.field-meta.xml
<CustomField>
    <fullName>Product_Module_Corrected__c</fullName>
    <formula>TEXT(Product2.Corrected_Module_for_metering__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Module Corrected</label>
    <type>Text</type>
</CustomField>