foundation-objs/main/default/objects/QuoteLineItem/fields/Purchases_Invoices_one__c.field-meta.xml
<CustomField>
    <fullName>Purchases_Invoices_one__c</fullName>
    <label>Purchases Invoices</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>