foundation-objs/main/default/objects/QuoteLineItem/fields/Renewal_Service_Payload__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Service_Payload__c</fullName>
    <label>Renewal Service Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>