foundation-objs/main/default/objects/QuoteLineItem/fields/SOW_Drive_Link__c.field-meta.xml
<CustomField>
    <fullName>SOW_Drive_Link__c</fullName>
    <label>SOW Drive Link</label>
    <type>Url</type>
</CustomField>