foundation-objs/main/default/objects/QuoteLineItem/fields/TAN_Number__c.field-meta.xml
<CustomField>
    <fullName>TAN_Number__c</fullName>
    <label>TAN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>