foundation-objs/main/default/objects/QuoteLineItem/fields/TDS_Price__c.field-meta.xml
<CustomField>
    <fullName>TDS_Price__c</fullName>
    <label>TDS Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>