foundation-objs/main/default/objects/QuoteLineItem/fields/Threshold_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Threshold_List_Price__c</fullName>
    <formula>IF( AND(Is_Combo_Price_Applicable__c, OR(Threshold_List_Price_E__c != NULL, Threshold_List_Price_E__c != 0)), Threshold_List_Price_E__c, 


IF(
    Quote.Opportunity.Account.Channel_Partner_Account_Name__c = &apos;UNEECOPS TECHNOLOGIES LIMITED&apos;,
(
IF(AND(OR(Quote.Opportunity.RecordType.Name = &apos;Renewal&apos;, Quote.Opportunity.RecordType.Name = &apos;Renewal - Multi year&apos;),CONTAINS(Quote.Opportunity.Owner.Department, &apos;KAM&apos;)),
IF(Product2.ProductCode=&apos;GST-PREMIUM&apos;,150000,
IF(Product2.ProductCode=&apos;GST-ULTIMATE&apos;,300000,IF(Product2.ProductCode=&apos;GST-ADVANTAGE_CSM&apos; ,75000,
IF(Product2.ProductCode=&apos;GST-ADVANTAGE&apos; ,
75000,Product2.Threshold_Price__c)))),

IF(AND( OR( TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;EC&apos; , TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;TL_EC&apos;, TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;PBM&apos;, TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;TL_Channel&apos;, CONTAINS(Quote.Opportunity.Owner.Division,&apos;Yellow&apos;)), Product2.ProductCode = &apos;GST-PREMIUM&apos; , Quote.Total_B2B_PR_B2C_invoice__c &lt;= 30000 ),

Product2.Threshold_List_Price__c/2,

IF(OR(TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;EC&apos; , TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;TL_EC&apos;, TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;PBM&apos;, TEXT(Quote.Opportunity.Owner.User_Category__c) = &apos;TL_Channel&apos;, CONTAINS(Quote.Opportunity.Owner.Division,&apos;Yellow&apos;)),
IF(OR(Product2.ProductCode=&apos;MITC-ULTIMATE&apos;, Product2.ProductCode=&apos;MITC-ULTIMATE-NOPAY&apos;),500000,
IF(Product2.ProductCode=&apos;MITC-PREMIUM&apos; ,300000,Product2.Threshold_Price__c)),


IF( NOT( ISNULL( Type_of_Integration__c ) ) ,
TOI_Calculated_Threshold_LP__c,
Product2.Threshold_List_Price__c


)
))) / 4
), Calculate_Threshold_List_Price__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Threshold List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>