foundation-objs/main/default/objects/QuoteLineItem/fields/Total_Renewal_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Renewal_Price__c</fullName>
    <label>Total Renewal Price.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>