foundation-objs/main/default/objects/QuoteLineItem/fields/Total_Tax_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Value__c</fullName>
    <label>Total Tax Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>