foundation-objs/main/default/objects/QuoteLineItem/fields/Translation__c.field-meta.xml
<CustomField>
    <fullName>Translation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Translation</label>
    <type>Checkbox</type>
</CustomField>